--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.67.2",
-    "motion": "^12.4.10",
+    "lucide-react": "^0.482.0",
+    "motion": "^12.5.0",
     "next": "15.2.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-loader-spinner": "^6.1.6",
     "swiper": "^11.2.5"
   },
   "devDependencies": {
