--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "15.2.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.2",
     "react-loader-spinner": "^6.1.6",
     "swiper": "^11.2.5",
     "tailwind-merge": "^3.0.2"
