--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.6.1",
     "@tanstack/react-query": "^5.67.2",
     "lucide-react": "^0.482.0",
     "motion": "^12.5.0",
@@ -17,6 +18,7 @@
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
     "react-loader-spinner": "^6.1.6",
+    "react-redux": "^9.2.0",
     "swiper": "^11.2.5",
     "tailwind-merge": "^3.0.2"
   },
