--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "15.2.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-fast-marquee": "^1.6.5",
     "react-hot-toast": "^2.5.2",
     "react-loader-spinner": "^6.1.6",
     "react-redux": "^9.2.0",
