--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-loader-spinner": "^6.1.6",
     "react-redux": "^9.2.0",
     "swiper": "^11.2.5",
-    "tailwind-merge": "^3.2.0"
+    "tailwind-merge": "^3.2.0",
+    "use-debounce": "^10.0.5"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
