--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-redux": "^9.2.0",
     "swiper": "^11.2.5",
     "tailwind-merge": "^3.2.0",
-    "use-debounce": "^10.0.5"
+    "use-debounce": "^10.0.5",
+    "zod": "^3.25.71"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
