--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "motion": "^12.5.0",
     "next": "15.2.1",
     "react": "^19.0.0",
+    "react-countup": "^6.5.3",
     "react-dom": "^19.0.0",
     "react-fast-marquee": "^1.6.5",
     "react-hot-toast": "^2.5.2",
