--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@babel/runtime": "^7.27.6",
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
+    "@radix-ui/react-slot": "^1.2.3",
     "@reduxjs/toolkit": "^2.6.1",
     "@tanstack/react-query": "^5.67.2",
-    "lucide-react": "^0.482.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.525.0",
     "motion": "^12.5.0",
     "next": "15.2.1",
     "react": "^19.0.0",
@@ -19,15 +24,16 @@
     "react-dom": "^19.0.0",
     "react-fast-marquee": "^1.6.5",
     "react-hot-toast": "^2.5.2",
-    "react-loader-spinner": "^6.1.6",
     "react-redux": "^9.2.0",
+    "react-slider": "^2.0.6",
     "swiper": "^11.2.5",
-    "tailwind-merge": "^3.2.0",
+    "tailwind-merge": "^3.3.1",
     "use-debounce": "^10.0.5",
     "zod": "^3.25.71"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4"
+    "tailwindcss": "^4",
+    "tw-animate-css": "^1.3.5"
   }
 }
