--- a/package.json
+++ b/package.json
@@ -10,9 +10,6 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.27.6",
-    "@headlessui/react": "^2.2.4",
-    "@radix-ui/react-dropdown-menu": "^2.1.15",
-    "@radix-ui/react-slot": "^1.2.3",
     "@reduxjs/toolkit": "^2.6.1",
     "@tanstack/react-query": "^5.67.2",
     "class-variance-authority": "^0.7.1",
@@ -34,7 +31,6 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
-    "tw-animate-css": "^1.3.5"
+    "tailwindcss": "^4"
   }
 }
