--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.27.6",
+    "@hookform/resolvers": "^5.2.1",
     "@reduxjs/toolkit": "^2.6.1",
     "@tanstack/react-query": "^5.67.2",
     "class-variance-authority": "^0.7.1",
@@ -21,6 +22,7 @@
     "react-countup": "^6.5.3",
     "react-dom": "^19.0.0",
     "react-fast-marquee": "^1.6.5",
+    "react-hook-form": "^7.62.0",
     "react-hot-toast": "^2.5.2",
     "react-redux": "^9.2.0",
     "react-slider": "^2.0.6",
